SERVER-16893 Disallow creation of v0 indexes with non-mmapv1 storage engines

Also moved jstests/tool/dumprestore6.js to jstests/mmapv1/dumprestore6.js
since this JS test attempts to restore a v0 index