jstests/noPassthroughWithMongod/index_check10.js
@@ -134,5 +134,8 @@ function doIt( indexVersion ) {
 
 for( var z = 0; z < 5; ++z ) {
     var indexVersion = z % 2;
-    doIt( indexVersion );
+    var storageEngine = jsTest.options().storageEngine;
+    if (!storageEngine || storageEngine === 'mmapv1' || indexVersion !== 0) {
+        doIt(indexVersion);
+    }
 }
